# smart-trash

./: .env  .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: esp_runtime.md
scripts/: evaluate_anomalib_spotter.py  evaluate_autoencoder_spotter.py  infer_anomalib_spotter.py  infer_autoencoder_spotter.py  infer_spotter_daae.py  infer_spotter_patchcore.py  open-firewall.ps1  prepare_spotter_dataset.py  start-server.ps1  test_spotter_daae.py  test_spotter_patchcore.py  train_anomalib_spotter.py  train_autoencoder_spotter.py  train_spotter_daae.py  train_spotter_patchcore.py
src/: __init__.py
src/app/: main.py
src/app/core/: config.py
src/app/routers/: images.py  pages.py  pipeline.py  realtime.py  ui.py
src/app/services/: __init__.py  image_events.py  image_service.py  pipeline_service.py
src/app/templates/: base.html  index.html
src/config/: spotter_patchcore.yaml
src/config/spotter/: evaluate_autoencoder_spotter.json  test_spotter_daae.json  train_autoencoder_spotter.json  train_spotter_daae.json
src/pipeline/: __init__.py  classifier.py  crop.py  runtime.py
src/spotter/: __init__.py  config.py  dataset.py  predictor.py  training.py
src/spotter/config/: __init__.py  anomalib_config.py  autoencoder_config.py  config.py  spotter_config.py
src/spotter/data/: __init__.py  anomalib_dataset.py  autoencoder_dataset.py  dataset.py  spotter_dataset.py
src/spotter/inference/: __init__.py  anomalib_spotter.py  autoencoder_inference.py  autoencoder_spotter.py  base_spotter.py  ensemble_spotter.py  predictor.py  spotter_inference.py  spotter_predictor.py  visualization.py
src/spotter/models/: __init__.py  anomalib_patchcore.py  autoencoder_model.py  patchcore.py  (+1 more)
(+13 files in other folders)
