[project]
name = "smart-trash"
version = "1.0.0"
description = "Smart Trash: Classifier and Spotter for waste"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anomalib>=2.3.3,<3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "opencv-python>=4.10.0",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.4.41",
    "uvicorn>=0.46.0",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
